website/src/app/page.module.css
.Section2 {
    flex-wrap: wrap;
    justify-content: space-around;
    text-align: center;
}

.Section2 .column {
    flex-basis: 25%;
    min-width: 300px;
}

.Section2 .icon {
    width: 3rem;
    height: auto;
    margin: 10px auto;
    display: block;
}

.Section2 .card {
    display: grid;
    grid-template-rows: subgrid;
    grid-row: span 2;
    margin-inline: 20px;
}

.Section2 .p {
    font-size: 1.5rem;
}

.Section3 {
    display: flex;
    flex-direction: column;
}

.Section3 .icon {
    height: 3rem;
    width: auto;
}

.Section3 .gridWrapper {
    grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
    gap: 30px;
    margin-inline: 30px;
}

@media (max-width: 989px) {
    .Section3 .gridWrapper {
        grid-template-columns: repeat(auto-fit, minmax(50%, 70%));
        justify-content: center;
    }
}

@media (max-width: 680px) {
    .Section3 .gridWrapper {
        grid-template-columns: repeat(auto-fit, 90%) !important;
    }
}

.Section3 .card {
    display: grid;
    grid-template-rows: subgrid;
    grid-row: span 2;
}

.Section4 {
    text-align: center;
    display: flex;
    flex-direction: column;
}

.Section4 .timeline {
    width: 94%;
    height: auto;
    justify-content: center;
    margin-inline: 3%;
}

.Section5 {
    flex-wrap: wrap;
    text-align: center;
}

.Section5 .grants {
    display: flex;
    gap: 30px;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    flex-wrap: wrap;
    margin-top: 30px;
}

.Section5 .grantLogo {
    height: 5rem;
    width: auto;    
}

.Section5 .cta {
    width: 100%;
}

@media screen and (max-width: 480px) {      
    .Section2 .column {
        flex-basis: 100%;
        min-width: auto;
    }
    
    .Section3 .card {
        max-width: none;
    }
}

@media screen and (min-width: 481px) and (max-width: 768px) {    
    .Section2 .column {
        flex-basis: 45%;
    }
}

